# EssayInsightsAI

./: .gitignore  Makefile  README.md  experiments.ipynb  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
analyzer/: dataset.py  infer.py  main.py  metrics.py  model.py  postprocess.py  requirements.txt  train.py  utils.py
analyzer/configs/: config.yaml  template.yaml
analyzer/notebooks/: experiments.ipynb  results_analysis.ipynb
chatbot/: .env
chatbot/backend/: run.py
chatbot/backend/schemas/: request_response.py
chatbot/backend/services/: analyze.py  assistant.py  extractor.py
chatbot/backend/utils/: prompts.py
chatbot/frontend/: app.py
chatbot/frontend/components/: analyze_button.py  input_box.py  markdowns.py  side_panel.py  sidepanel.py
